--- a/OTA_STM32/BootUART/main/CMakeLists.txt
+++ b/OTA_STM32/BootUART/main/CMakeLists.txt
@@ -1,3 +1,4 @@
-idf_component_register(SRCS "state_control.c" "json_control.c" "wifi_setup.c" "uart_command.c" "setup_SPIFFS.c" "http_connection.c" "main.c" "control.c" "nvs_control.c"
-                    INCLUDE_DIRS ".")
-spiffs_create_partition_image(spiffs ../partition FLASH_IN_PROJECT)
+idf_component_register(
+    SRC_DIRS "src"
+    INCLUDE_DIRS "inc"
+)
